# sunrise-olive

./: Cargo.toml  README.md  index.html  tailwind.config.js
public/posts/: 2024-11-12-my-first-blog.md
src/: lib.rs  main.rs
