[package]
name = "rs-oblivion-times"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6.15", features = ["nightly"] }
leptos_router = { version = "0.6.15", features = ["csr", "nightly"] }
pulldown-cmark = "0.12.2"

# cfg-if = "1.0"

# dependecies for client (enable hydrate set)
# wasm-bindgen = { version = "=0.2.95", optional = false }
console_error_panic_hook = { version = "0.1", optional = false }

# dependecies for server (enable when ssr set)
# leptos_actix = { version = "0.7.0", optional = true }
# actix-files = { version = "0.6", optional = true }
# actix-web = { version = "4.9", features = ["macros"], optional = true }
# futures = { version = "0.3", optional = true }

# [features]
# default = ["ssr"]

# csr = ["leptos/csr", "leptos_router/csr"]
# hydrate = [
#   "leptos/hydrate", 
#   "leptos_router/hydrate",
#   "dep:wasm-bindgen",
#   "dep:console_error_panic_hook",
#   "dep:wasm-bindgen",
# ]
# ssr = [
#   "dep:actix-files",
#   "dep:actix-web",
#   "dep:leptos_actix",
#   "leptos/ssr",
#   "leptos_router/ssr",
#   "leptos_meta/ssr",
# ]

[package.metadata.leptos]
output-name = "rs-oblivion-times"
# lib-features = ["hydrate"]
# bin-features =["ssr"]
site-root = "target/site"
tailwind-input-file = "input.css"
